# path-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt  appGui.cpp  appGui.hpp  world.cpp  world.hpp
core/accelerators/: aabb.hpp  accelerator.cpp  accelerator.hpp  node.hpp
core/brdfs/: addBrdf.hpp  blinn.hpp  brdf.hpp  cooktorrance.hpp  emissive.hpp  lambert.hpp  multipleBrdf.hpp
core/cameras/: camera.cpp  camera.hpp  orthographic.cpp  orthographic.hpp  perspective.cpp  perspective.hpp
core/geometricObjects/: box.cpp  box.hpp  disk.cpp  disk.hpp  objectGroup.hpp  plane.cpp  plane.hpp  primitive.hpp  ring.cpp  ring.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
core/geometry/: mat4d.cpp  mat4d.hpp  mat4f.cpp  mat4f.hpp  ray.hpp  transform.cpp  transform.hpp  vec3d.hpp  vec3f.hpp  vec4d.hpp  vec4f.hpp
core/integrators/: ambientOcclusion.hpp  constant.hpp  integrator.hpp  pathtracing.hpp  whitted.hpp
core/lights/: directional.hpp  light.hpp  point.hpp
core/materials/: material.hpp
core/samplers/: hammerslay.hpp  multijitter.hpp  random.hpp  regular.hpp  sampler.hpp  stratified.hpp  superSampler.hpp
core/utilities/: buildFunctions.hpp  constants.hpp  environment.hpp  film.hpp  intersection.hpp  math.hpp  parser.cpp  parser.hpp  parser_bak.cpp  pixelBuffer.hpp  stats.hpp  texture.hpp  timer.hpp
scenes/: cook_torrance_roughness.xml  cornell_box.xml  cornell_box.xml~  corner.xml  earth.xml  earth.xml~  exam.xml  material.xml  material.xml~  pattern.xml  plane_tex.xml  prova_envSpheric.xml  prova_ind.xml  prova_ind.xml~  prova_normal.xml  prova_refl.xml  prova_tangent.xml  r2d2_bb8.xml  render.xml  sabers.xml  saturn.xml  simple_sphere.xml  starwars_cornell_box.xml
